docs/api/qiskit/0.28/qpy.md
---
title: qpy_serialization
description: API reference for qiskit.circuit.qpy_serialization
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.circuit.qpy_serialization
---

<span id="module-qiskit.circuit.qpy_serialization" />

<span id="qiskit-qpy" />

# QPY serialization

<span id="module-qiskit.circuit.qpy_serialization" />

`qiskit.circuit.qpy_serialization¶`

|                             |                                 |
| --------------------------- | ------------------------------- |
| `load`(file\_obj)           | Load a QPY binary file          |
| `dump`(circuits, file\_obj) | Write QPY binary data to a file |

## QPY Format

<span id="module-qiskit.circuit.qpy_serialization" />

`¶`

The QPY serialization format is a portable cross-platform binary serialization format for [`QuantumCircuit`](qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") objects in Qiskit. The basic file format is as follows:

A QPY file (or memory object) always starts with the following 7 byte UTF8 string: `QISKIT` which is immediately followed by the overall file header. The contents of thie file header as defined as a C struct are:

```python
struct {
    unsigned char qpy_version;
    unsigned char qiskit_major_version;
    unsigned char qiskit_minor_version;
    unsigned char qiskit_patch_version;
    uint64_t num_circuits;
}
```

All values use network byte order [1](#f1) (big endian) for cross platform compatibility.

The file header is immediately followed by the circuit payloads. Each individual circuit is composed of the following parts:

`HEADER | METADATA | REGISTERS | CUSTOM_DEFINITIONS | INSTRUCTIONS`

There is a circuit payload for each circuit (where the total number is dictated by `num_circuits` in the file header). There is no padding between the circuits in the data.

### HEADER[¶](#header "Permalink to this headline")

The contents of HEADER as defined as a C struct are:

```python
struct {
    unit16_t name_size;
    double global_phase;
    uint32_t num_qubits;
    uint32_t num_clbits;
    uint64_t metadata_size;
    uint32_t num_registers;
    uint64_t num_instructions;
    uint64_t num_custom_gates;
}
```

This is immediately followed by `name_size` bytes of utf8 data for the name of the circuit.

### METADATA[¶](#metadata "Permalink to this headline")

The METADATA field is a UTF8 encoded JSON string. After reading the HEADER (which is a fixed size at the start of the QPY file) and the `name` string you then read the\`metadata\_size\`\` number of bytes and parse the JSON to get the metadata for the circuit.

### REGISTERS[¶](#registers "Permalink to this headline")

The contents of REGISTERS is a number of REGISTER object. If num\_registers is > 0 then after reading METADATA you read that number of REGISTER structs defined as:

```python
struct {
    char type;
    _Bool standalone;
    uint32_t size;
    unit16_t name_size;
}
```

`type` can be `'q'` or `'c'`.

Immediately following the REGISTER struct is the utf8 encoded register name of size `name_size`. After the `name` utf8 bytes there is then an array of uint32\_t values of size `size` that contains a map of the register’s index to the circuit’s qubit index. For example, array element 0’s value is the index of the `register[0]`’s position in the containing circuit’s qubits list.

The standalone boolean determines whether the register is constructed as a standalone register that was added to the circuit or was created from existing bits. A register is considered standalone if it has bits constructed solely as part of it, for example:

```python
qr = QuantumRegister(2)
qc = QuantumCircuit(qr)
```

the register `qr` would be a standalone register. While something like:

```python
bits = [Qubit(), Qubit()]
qr = QuantumRegister(bits=bits)
qc = QuantumCircuit(bits=bits)
```

`qr` would have `standalone` set to `False`.

### CUSTOM\_DEFINITIONS[¶](#custom-definitions "Permalink to this headline")

If the circuit contains custom defitions for any of the instruction in the circuit. this section

CUSTOM\_DEFINITION\_HEADER contents are defined as:

```python
struct {
    uint64_t size;
}
```

If size is greater than 0 that means the circuit contains custom instruction(s). Each custom instruction is defined with a CUSTOM\_INSTRUCTION block defined as:

```python
struct {
    uint16_t name_size;
    char type;
    _Bool custom_definition;
    uint64_t size
}
```

Immediately following the CUSTOM\_INSTRUCTION struct is the utf8 encoded name of size `name_size`.

If `custom_definition` is `True` that means that the immediately following `size` bytes contains a QPY circuit data which can be used for the custom definition of that gate. If `custom_definition` is `False` than the instruction can be considered opaque (ie no definition).

### INSTRUCTIONS[¶](#instructions "Permalink to this headline")

The contents of INSTRUCTIONS is a list of INSTRUCTION metadata objects

```python
struct {
    uint16_t name_size;
    uint16_t label_size;
    uint16_t num_parameters;
    uint32_t num_qargs;
    uint32_t num_cargs;
    _Bool has_conditionl
    uint16_t conditonal_reg_name_size;
    long long conditional_value;
}
```

This metadata object is immediately followed by `name_size` bytes of utf8 bytes for the `name`. `name` here is the Qiskit class name for the Instruction class if it’s defined in Qiskit. Otherwise it falls back to the custom instruction name. Following the `name` bytes there are `label_size` bytes of utf8 data for the label if one was set on the instruction. Following the label bytes if `has_conditional` is `True` then there are `conditonal_reg_name_size` bytes of utf8 data for the name of the condtional register name.

This is immediately followed by the INSTRUCTION\_ARG structs for the list of arguments of that instruction. These are in the order of all quantum arguments (there are num\_qargs of these) followed by all classical arguments (num\_cargs of these).

The contents of each INSTRUCTION\_ARG is:

```python
struct {
    char type;
    unisgned int index;
}
```

`type` can be `'q'` or `'c'`.

After all arguments for an instruction the parameters are specified with `num_parameters` INSTRUCTION\_PARAM structs.

The contents of each INSTRUCTION\_PARAM is:

```python
struct {
    char type;
    uint64_t size;
}
```

After each INSTRUCTION\_PARAM the next `size` bytes are the parameter’s data. The `type` field can be `'i'`, `'f'`, `'p'`, `'e'`, `'s'`, or `'n'` which dictate the format. For `'i'` it’s an integer, `'f'` it’s a double, `'s'` if it’s a string (encoded as utf8), `'p'` defines a [`Parameter`](qiskit.circuit.Parameter#qiskit.circuit.Parameter "qiskit.circuit.Parameter") object which is represented by a PARAM struct (see below), `e` defines a [`ParameterExpression`](qiskit.circuit.ParameterExpression#qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression") object (that’s not a `Paramter`) which is represented by a PARAM\_EXPR struct (see below), and `'n'` represents an object from numpy (either an `ndarray` or a numpy type) which means the data is .npy format [2](#f2) data.

### PARAMETER[¶](#parameter "Permalink to this headline")

A PARAMETER represents a [`Parameter`](qiskit.circuit.Parameter#qiskit.circuit.Parameter "qiskit.circuit.Parameter") object the data for a INSTRUCTION\_PARAM. The contents of the PARAMETER are defined as:

```python
struct {
    uint16_t name_size;
    char uuid[16];
}
```

which is immediately followed by `name_size` utf8 bytes representing the parameter name.

### PARAMETER\_EXPR[¶](#parameter-expr "Permalink to this headline")

A PARAMETER\_EXPR represents a [`ParameterExpression`](qiskit.circuit.ParameterExpression#qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression") object that the data for an INSTRUCTION\_PARAM. The contents of a PARAMETER\_EXPR are defined as:

The PARAMETER\_EXPR data starts with a header:

```python
struct {
    uint64_t map_elements,
    uint64_t expr_size,
}
```

Immediately following the header is `expr_size` bytes of utf8 data containing the expression string, which is the sympy srepr of the expression for the parameter expression. Follwing that is a symbol map which contains `map_elements` elements with the format

```python
struct {
    char type;
    uint64_t size;
}
```

Which is followed immediately by `PARAMETER` object (both the struct and utf8 name bytes) for the symbol map key. That is followed by `size` bytes for the data of the symbol. The data format is dependent on the value of `type`. If `type` is `p` then it represents a [`Parameter`](qiskit.circuit.Parameter#qiskit.circuit.Parameter "qiskit.circuit.Parameter") and size will be 0, the value will just be the same as the key. If `type` is `f` then it represents a double precision float. If `type` is `c` it represents a double precision complex, which is represented by:

```python
struct {
    double real;
    double imag;
}
```

this matches the internal C representation of Python’s complex type. [3](#f3) Finally, if type is `i` it represents an integer which is an `int64_t`.

**[1](#id1)**

[https://tools.ietf.org/html/rfc1700](https://tools.ietf.org/html/rfc1700)

**[2](#id2)**

[https://numpy.org/doc/stable/reference/generated/numpy.lib.format.html](https://numpy.org/doc/stable/reference/generated/numpy.lib.format.html)

**[3](#id3)**

[https://docs.python.org/3/c-api/complex.html#c.Py\_complex](https://docs.python.org/3/c-api/complex.html#c.Py_complex)

